pod-security/baseline/disallow-privileged-containers/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow-privileged-containers.yaml
assert:
- policy-assert.yaml
