pod-security/baseline/disallow-privileged-containers/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../disallow-privileged-containers.yaml | kubectl apply -f -
