pod-security/baseline/disallow-privileged-containers/e2e/bad-pod.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      privileged: true
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      privileged: true
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      privileged: true
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      privileged: true
